# course

./: .gitignore  000-index.ipynb  000-introduction.md  010-the_machine_learning_landscape.ipynb  011-first_machine_learning_project.ipynb  013-0-numpy_arrays.ipynb  013-1-numpy_indexing-and_selection.ipynb  013-2-numpy_operations.ipynb  013-3-numpy-exercises.ipynb  014-pandas_matplotlib_introduction_case_corona.ipynb  020-end_to_end_machine_learning_project.ipynb  021-exercise_building_oat.ipynb  050-support_vector_machines.ipynb  060-decision_trees.ipynb  080-association_rules.ipynb  101-the_machine_learning_landscape.ipynb  110-the_machine_learning_landscape.ipynb  111-the_machine_learning_landscape.ipynb  121-numpy.ipynb  122-pandas.ipynb  123-matplotlib.ipynb  130-first_machine_learning_project.ipynb  131-first_machine_learning_project.ipynb  131-pandas.ipynb  140-project-aanwezigheden.md  141-project-solar-tips.ipynb  150-exercise_email_classification_tfid_voting_solution.ipynb  200-end_to_end_machine_learning_project.ipynb  210-end_to_end_machine_learning_project.ipynb  220-dataprep_ai.ipynb  220-exercise_building_oat.ipynb  220-exercise_building_oat_sol.ipynb  220-exercise_building_oat_solution.ipynb  230-exercise_building_oat.ipynb  230-exercise_building_oat_sol.ipynb  230-exercise_solar.ipynb  240-feature_engineering.ipynb  250-exercise_solar_feature_engineering.ipynb  300-classification.ipynb  310-classification.ipynb  (+47 more)
bertopic/: savedrecs10001-10439.xls
datasets/: DataEchos.csv  adventureworks.csv  buildingoat.csv  demographic.csv  kijkcijfers_journaal_7uur.csv  (+8 more)
(+23 files in other folders)
